--- a/functions.ipynb
+++ b/functions.ipynb
@@ -56,6 +56,7 @@
     "    '2': ['10006'],\n",
     "    '3': []\n",
     "}\n",
+    "docs = str(directories.values())\n",
     "def main():\n",
     "    while True:\n",
     "        if user_input == 'p':\n",
@@ -83,24 +84,22 @@
     "            print('Список команд:\\np – команда, которая по номеру документа выводит имя его владельца;\\ns – команда, которая по номеру документа выведит номер полки, на которой он находится\\nl – команда, которая выводит список всех документов\\nas – команда, которая добавляет новую полку в перечень\\nd – удаление заданного документа\\nm – move – перенос документа с одной полки на другую\\na – добавление нового документа')\n",
     "            break\n",
     "def show_name():\n",
-    "    i = str(directories.values())\n",
     "    number_input = input('Введите номер документа')\n",
-    "    if number_input in i:\n",
-    "        for k in documents:\n",
-    "            if number_input in k.values():\n",
-    "                for name in k.items():\n",
-    "                    return print(k['name'])\n",
+    "    if number_input in docs:\n",
+    "        for i in documents:\n",
+    "            if number_input in i.values():\n",
+    "                for name in i.items():\n",
+    "                    return print(i['name'])\n",
     "    else:\n",
     "        print('Вы ввели номер несуществующего документа')\n",
     "        return show_name()\n",
     "def show_shelf():\n",
-    "    i = str(directories.values())\n",
     "    number_input = input('Введите номер документа')\n",
-    "    if number_input in i:\n",
-    "        for k in directories.items():\n",
-    "                k = list(k)\n",
-    "                if number_input in k[1]:\n",
-    "                    return print('Указанный документ находится на полке', k[0])\n",
+    "    if number_input in docs:\n",
+    "        for i in directories.items():\n",
+    "                i = list(i)\n",
+    "                if number_input in i[1]:\n",
+    "                    return print('Указанный документ находится на полке', i[0])\n",
     "    else:\n",
     "        print('Вы ввели номер несуществующего документа')\n",
     "        return show_shelf()\n",
@@ -113,9 +112,8 @@
     "        directories[user_input] = []\n",
     "        return print('Полка добавлена')\n",
     "def delete_doc():\n",
-    "    i = str(directories.values())\n",
     "    number_input = input('Введите номер удаляемого документа ')\n",
-    "    if number_input in i:\n",
+    "    if number_input in docs:\n",
     "        for i in directories.values():\n",
     "            if number_input in i:\n",
     "                i.remove(number_input)\n",
@@ -127,9 +125,8 @@
     "        print('Вы ввели номер несуществуемого документа')\n",
     "        return delete_doc()\n",
     "def move_doc():\n",
-    "    i = str(directories.values())\n",
     "    number_input = input('Введите номер документа')\n",
-    "    if number_input in i:\n",
+    "    if number_input in docs:\n",
     "        for i in directories.values():\n",
     "            if number_input in i:\n",
     "                i.remove(number_input)\n",
