--- a/functions.ipynb
+++ b/functions.ipynb
@@ -1,46 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Вы работаете секретарем и вам постоянно приходят различные документы. Вы должны быть очень внимательны, чтобы не потерять ни один документ. Каталог документов хранится в следующем виде:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "documents = [\n",
-    "    {'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'},\n",
-    "    {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'},\n",
-    "    {'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов'}\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Перечень полок, на которых находятся документы хранится в следующем виде:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "directories = {\n",
-    "    '1': ['2207 876234', '11-2'],\n",
-    "    '2': ['10006'],\n",
-    "    '3': []\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -56,8 +16,8 @@
     "    '2': ['10006'],\n",
     "    '3': []\n",
     "}\n",
-    "docs = str(directories.values())\n",
     "def main():\n",
+    "    user_input = input('Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"')\n",
     "    while True:\n",
     "        if user_input == 'p':\n",
     "            show_name()\n",
@@ -81,25 +41,41 @@
     "            new_doc()\n",
     "            break\n",
     "        elif user_input == 'help':\n",
-    "            print('Список команд:\\np – команда, которая по номеру документа выводит имя его владельца;\\ns – команда, которая по номеру документа выведит номер полки, на которой он находится\\nl – команда, которая выводит список всех документов\\nas – команда, которая добавляет новую полку в перечень\\nd – удаление заданного документа\\nm – move – перенос документа с одной полки на другую\\na – добавление нового документа')\n",
+    "            print('Список команд:\\np – Вывод имени владельца по номеру документа\\ns – Вывод номера полки по номеру документа\\nl – Вывод списка всех документов\\nas – Добавление новой полки в перечень полок\\nd – Удаление заданного документа\\nm – Перенос документа с одной полки на другую\\na – Добавление нового документа')\n",
     "            break\n",
+    "        elif user_input == 'back':\n",
+    "            break\n",
+    "        elif user_input == 'test':\n",
+    "            print(directories, documents, directories.values(), directories.items())\n",
+    "            return main()\n",
+    "        else:\n",
+    "            print('Вы ввели некорретную команду')\n",
+    "            return main()\n",
     "def show_name():\n",
     "    number_input = input('Введите номер документа')\n",
+    "    docs = str(directories.values())\n",
     "    if number_input in docs:\n",
     "        for i in documents:\n",
     "            if number_input in i.values():\n",
     "                for name in i.items():\n",
-    "                    return print(i['name'])\n",
+    "                    print(i['name'])\n",
+    "                    return main()\n",
+    "    elif number_input == 'back':\n",
+    "        return main()\n",
     "    else:\n",
     "        print('Вы ввели номер несуществующего документа')\n",
-    "        return show_name()\n",
+    "        return show_name()           \n",
     "def show_shelf():\n",
     "    number_input = input('Введите номер документа')\n",
+    "    docs = str(directories.values())\n",
     "    if number_input in docs:\n",
     "        for i in directories.items():\n",
     "                i = list(i)\n",
     "                if number_input in i[1]:\n",
-    "                    return print('Указанный документ находится на полке', i[0])\n",
+    "                    print('Указанный документ находится на полке', i[0])\n",
+    "                    return main()\n",
+    "    elif number_input == 'back':\n",
+    "        return main()\n",
     "    else:\n",
     "        print('Вы ввели номер несуществующего документа')\n",
     "        return show_shelf()\n",
@@ -108,11 +84,15 @@
     "    if user_input in directories.keys():\n",
     "        print('Полка уже существует')\n",
     "        return new_shelf()\n",
+    "    elif user_input == 'back':\n",
+    "        return main()\n",
     "    else:\n",
     "        directories[user_input] = []\n",
-    "        return print('Полка добавлена')\n",
+    "        print('Полка добавлена')\n",
+    "        return main()\n",
     "def delete_doc():\n",
     "    number_input = input('Введите номер удаляемого документа ')\n",
+    "    docs = str(directories.values())\n",
     "    if number_input in docs:\n",
     "        for i in directories.values():\n",
     "            if number_input in i:\n",
@@ -120,12 +100,16 @@
     "        for k in documents:\n",
     "            if number_input in k.values():\n",
     "                documents.remove(k)\n",
-    "        return print('Документ удалён')\n",
+    "        print('Документ удалён')\n",
+    "        return main()\n",
+    "    elif number_input == 'back':\n",
+    "        return main()\n",
     "    else:\n",
     "        print('Вы ввели номер несуществуемого документа')\n",
     "        return delete_doc()\n",
     "def move_doc():\n",
     "    number_input = input('Введите номер документа')\n",
+    "    docs = str(directories.values())\n",
     "    if number_input in docs:\n",
     "        for i in directories.values():\n",
     "            if number_input in i:\n",
@@ -136,56 +120,54 @@
     "                        k = list(k)\n",
     "                        if shelf_input in k:\n",
     "                            k[1].append(number_input)\n",
-    "                    return print('Документ перемещен')\n",
+    "                    print('Документ перемещен')\n",
+    "                    return main()\n",
     "                else:\n",
     "                    print('Вы ввели номер несуществующей полки')\n",
     "                    return move_doc()\n",
+    "    elif number_input == 'back':\n",
+    "        return main()\n",
     "    else: \n",
     "        print('Вы ввели номер несуществуемого документа')\n",
     "        return move_doc()\n",
     "def new_doc():\n",
     "    type_input = input('Введите тип добавляемого документа')\n",
-    "    number_input = input('Введите номер добавляемого документа')\n",
-    "    name_input = input('Введите имя владельца добавляемого документа')\n",
-    "    shelf_input = input('Введите номер полки, в которую будет добавлен документ')\n",
-    "    if shelf_input in directories.keys():\n",
-    "        i = {'type': type_input, 'number': number_input, 'name': name_input}\n",
-    "        documents.append(i)\n",
-    "        for k in directories.items():\n",
-    "            k = list(k)\n",
-    "            if shelf_input in k:\n",
-    "                k[1].append(number_input)\n",
-    "        return print('Документ добавлен')\n",
+    "    if type_input == 'back':\n",
+    "        return main()\n",
     "    else:\n",
-    "        print('Вы ввели номер несуществующей полки')\n",
-    "        return new_doc()\n",
+    "        number_input = input('Введите номер добавляемого документа')\n",
+    "        if number_input == 'back':\n",
+    "            return main()\n",
+    "        else:\n",
+    "            name_input = input('Введите имя владельца добавляемого документа')\n",
+    "            if name_input == 'back':\n",
+    "                return main()\n",
+    "            else:\n",
+    "                shelf_input = input('Введите номер полки, в которую будет добавлен документ')\n",
+    "                if shelf_input in directories.keys():\n",
+    "                    i = {'type': type_input, 'number': number_input, 'name': name_input}\n",
+    "                    documents.append(i)\n",
+    "                    for k in directories.items():\n",
+    "                        k = list(k)\n",
+    "                        if shelf_input in k:\n",
+    "                            k[1].append(number_input)\n",
+    "                            docs == docs + number_input\n",
+    "                            return main()\n",
+    "                else:\n",
+    "                    print('Вы ввели номер несуществующей полки')\n",
+    "                    return new_doc()\n",
     "def show_list():\n",
     "    for i in documents:\n",
     "        print(*i.values())\n",
-    "print('Для просмотра всех доступных команд введите \"help\". Для завершения программы введите \"q\"')\n",
+    "    return main()\n",
     "while True:\n",
-    "    user_input = input('Введите команду ')\n",
-    "    if user_input == 'q':\n",
+    "    initial_input = input('Для начала введите \"start\". Для завершения программы введите \"quit\"')\n",
+    "    if initial_input == 'quit':\n",
     "        break\n",
+    "    elif initial_input == 'start':\n",
+    "        main()\n",
     "    else:\n",
-    "        main()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Необходимо реализовать пользовательские команды (внимание! это не название функций, которые должны быть выразительными, а команды, которые вводит пользователь, чтобы получить необходимый результат):\n",
-    "  \n",
-    "- p – people – команда, которая спросит номер документа и выведет имя человека, которому он принадлежит;  \n",
-    "- s – shelf – команда, которая спросит номер документа и выведет номер полки, на которой он находится  \n",
-    "*Правильно обработайте ситуации, когда пользователь будет вводить несуществующий документ*.\n",
-    "- l – list – команда, которая выведет список всех документов в формате   \n",
-    "**passport \"2207 876234\" \"Василий Гупкин\"**  \n",
-    "- as – add shelf – команда, которая спросит номер новой полки и добавит ее в перечень. *Предусмотрите случай, когда пользователь добавляет полку, которая уже существует*.\n",
-    "- d – delete – команда, которая спросит номер документа и удалит его из каталога и из перечня полок. *Предусмотрите сценарий, когда пользователь вводит несуществующий документ*;  \n",
-    "- m – move – команда, которая спросит номер документа и целевую полку и переместит его с текущей полки на целевую. *Корректно обработайте кейсы, когда пользователь пытается переместить несуществующий документ или переместить документ на несуществующую полку*;  \n",
-    "- a – add – команда, которая добавит новый документ в каталог и в перечень полок, спросив его номер, тип, имя владельца и номер полки, на котором он будет храниться. *Корректно обработайте ситуацию, когда пользователь будет пытаться добавить документ на несуществующую полку*."
+    "        print('Вы ввели некорректную команду')"
    ]
   },
   {
