--- a/functions.ipynb
+++ b/functions.ipynb
@@ -2,10 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Для начала введите \"start\". Для завершения программы введите \"quit\"\n",
+      "start\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "as\n",
+      "Введите номер добавляемой полки\n",
+      "4\n",
+      "Полка добавлена\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "a\n",
+      "Введите тип добавляемого документа\n",
+      "passport\n",
+      "Введите номер добавляемого документа\n",
+      "123456\n",
+      "Введите имя владельца добавляемого документа\n",
+      "Ivan Ivanov\n",
+      "Введите номер полки, в которую будет добавлен документ\n",
+      "4\n",
+      "Документ добавлен\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "test\n",
+      "['2207 876234', '11-2', '10006', '123456'] {'1': ['2207 876234', '11-2'], '2': ['10006'], '3': [], '4': ['123456']} [{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'}, {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'}, {'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов'}, {'type': 'passport', 'number': '123456', 'name': 'Ivan Ivanov'}]\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "list\n",
+      "Вы ввели некорретную команду\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "l\n",
+      "passport 2207 876234 Василий Гупкин\n",
+      "invoice 11-2 Геннадий Покемонов\n",
+      "insurance 10006 Аристарх Павлов\n",
+      "passport 123456 Ivan Ivanov\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "s\n",
+      "Введите номер документа\n",
+      "123456\n",
+      "Указанный документ находится на полке 4\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "m\n",
+      "Введите номер документа\n",
+      "123456\n",
+      "Введите номер целевой полки\n",
+      "3\n",
+      "Документ перемещен\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "s\n",
+      "Введите номер документа\n",
+      "123456\n",
+      "Указанный документ находится на полке 3\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "p\n",
+      "Введите номер документа\n",
+      "123456\n",
+      "Ivan Ivanov\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "d\n",
+      "Введите номер удаляемого документа\n",
+      "123456\n",
+      "Документ удалён\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "test\n",
+      "['2207 876234', '11-2', '10006'] {'1': ['2207 876234', '11-2'], '2': ['10006'], '3': [], '4': []} [{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'}, {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'}, {'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов'}]\n",
+      "Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\n",
+      "back\n",
+      "Для начала введите \"start\". Для завершения программы введите \"quit\"\n",
+      "quit\n"
+     ]
+    }
+   ],
    "source": [
+    "import itertools\n",
     "documents = [\n",
     "    {'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'},\n",
     "    {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'},\n",
@@ -16,8 +88,10 @@
     "    '2': ['10006'],\n",
     "    '3': []\n",
     "}\n",
+    "docs_ = list(directories.values())\n",
+    "docs = list(itertools.chain(*docs_))\n",
     "def main():\n",
-    "    user_input = input('Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"')\n",
+    "    user_input = input('Введите команду. Для просмотра всех доступных команд введите \"help\". Для возврата в предыдущее меню введите \"back\"\\n')\n",
     "    while True:\n",
     "        if user_input == 'p':\n",
     "            show_name()\n",
@@ -42,18 +116,18 @@
     "            break\n",
     "        elif user_input == 'help':\n",
     "            print('Список команд:\\np – Вывод имени владельца по номеру документа\\ns – Вывод номера полки по номеру документа\\nl – Вывод списка всех документов\\nas – Добавление новой полки в перечень полок\\nd – Удаление заданного документа\\nm – Перенос документа с одной полки на другую\\na – Добавление нового документа')\n",
-    "            break\n",
+    "            return main()\n",
     "        elif user_input == 'back':\n",
     "            break\n",
     "        elif user_input == 'test':\n",
-    "            print(directories, documents, directories.values(), directories.items())\n",
+    "            print(docs, directories, documents)\n",
     "            return main()\n",
     "        else:\n",
     "            print('Вы ввели некорретную команду')\n",
     "            return main()\n",
     "def show_name():\n",
-    "    number_input = input('Введите номер документа')\n",
-    "    docs = str(directories.values())\n",
+    "    number_input = input('Введите номер документа\\n')\n",
+    "    #docs = str(directories.values())\n",
     "    if number_input in docs:\n",
     "        for i in documents:\n",
     "            if number_input in i.values():\n",
@@ -66,8 +140,8 @@
     "        print('Вы ввели номер несуществующего документа')\n",
     "        return show_name()           \n",
     "def show_shelf():\n",
-    "    number_input = input('Введите номер документа')\n",
-    "    docs = str(directories.values())\n",
+    "    number_input = input('Введите номер документа\\n')\n",
+    "    #docs = str(directories.values())\n",
     "    if number_input in docs:\n",
     "        for i in directories.items():\n",
     "                i = list(i)\n",
@@ -80,7 +154,7 @@
     "        print('Вы ввели номер несуществующего документа')\n",
     "        return show_shelf()\n",
     "def new_shelf():\n",
-    "    user_input = input('Введите номер добавляемой полки ')\n",
+    "    user_input = input('Введите номер добавляемой полки\\n')\n",
     "    if user_input in directories.keys():\n",
     "        print('Полка уже существует')\n",
     "        return new_shelf()\n",
@@ -91,8 +165,8 @@
     "        print('Полка добавлена')\n",
     "        return main()\n",
     "def delete_doc():\n",
-    "    number_input = input('Введите номер удаляемого документа ')\n",
-    "    docs = str(directories.values())\n",
+    "    number_input = input('Введите номер удаляемого документа\\n')\n",
+    "    #docs = str(directories.values())\n",
     "    if number_input in docs:\n",
     "        for i in directories.values():\n",
     "            if number_input in i:\n",
@@ -100,6 +174,9 @@
     "        for k in documents:\n",
     "            if number_input in k.values():\n",
     "                documents.remove(k)\n",
+    "        for l in docs:\n",
+    "            if number_input in docs:\n",
+    "                docs.remove(number_input)\n",
     "        print('Документ удалён')\n",
     "        return main()\n",
     "    elif number_input == 'back':\n",
@@ -108,13 +185,13 @@
     "        print('Вы ввели номер несуществуемого документа')\n",
     "        return delete_doc()\n",
     "def move_doc():\n",
-    "    number_input = input('Введите номер документа')\n",
-    "    docs = str(directories.values())\n",
+    "    number_input = input('Введите номер документа\\n')\n",
+    "    #docs = str(directories.values())\n",
     "    if number_input in docs:\n",
     "        for i in directories.values():\n",
     "            if number_input in i:\n",
     "                i.remove(number_input)\n",
-    "                shelf_input = input('Введите номер целевой полки')\n",
+    "                shelf_input = input('Введите номер целевой полки\\n')\n",
     "                if shelf_input in directories.keys():\n",
     "                    for k in directories.items():\n",
     "                        k = list(k)\n",
@@ -131,19 +208,20 @@
     "        print('Вы ввели номер несуществуемого документа')\n",
     "        return move_doc()\n",
     "def new_doc():\n",
-    "    type_input = input('Введите тип добавляемого документа')\n",
+    "    #docs = str(directories.values())\n",
+    "    type_input = input('Введите тип добавляемого документа\\n')\n",
     "    if type_input == 'back':\n",
     "        return main()\n",
     "    else:\n",
-    "        number_input = input('Введите номер добавляемого документа')\n",
+    "        number_input = input('Введите номер добавляемого документа\\n')\n",
     "        if number_input == 'back':\n",
     "            return main()\n",
     "        else:\n",
-    "            name_input = input('Введите имя владельца добавляемого документа')\n",
+    "            name_input = input('Введите имя владельца добавляемого документа\\n')\n",
     "            if name_input == 'back':\n",
     "                return main()\n",
     "            else:\n",
-    "                shelf_input = input('Введите номер полки, в которую будет добавлен документ')\n",
+    "                shelf_input = input('Введите номер полки, в которую будет добавлен документ\\n')\n",
     "                if shelf_input in directories.keys():\n",
     "                    i = {'type': type_input, 'number': number_input, 'name': name_input}\n",
     "                    documents.append(i)\n",
@@ -151,7 +229,8 @@
     "                        k = list(k)\n",
     "                        if shelf_input in k:\n",
     "                            k[1].append(number_input)\n",
-    "                            docs == docs + number_input\n",
+    "                            docs == docs.append(number_input)\n",
+    "                            print('Документ добавлен')\n",
     "                            return main()\n",
     "                else:\n",
     "                    print('Вы ввели номер несуществующей полки')\n",
@@ -161,7 +240,7 @@
     "        print(*i.values())\n",
     "    return main()\n",
     "while True:\n",
-    "    initial_input = input('Для начала введите \"start\". Для завершения программы введите \"quit\"')\n",
+    "    initial_input = input('Для начала введите \"start\". Для завершения программы введите \"quit\"\\n')\n",
     "    if initial_input == 'quit':\n",
     "        break\n",
     "    elif initial_input == 'start':\n",
@@ -169,6 +248,13 @@
     "    else:\n",
     "        print('Вы ввели некорректную команду')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
